# dweb_browser_libs_bak

./: .gitattributes  .gitignore  .gitmodules  README.md
rust_library/: build.gradle.kts  settings.gradle.kts
rust_library/biometrics/uniffi/: Cargo.toml  build-macos.sh  build-windows.sh  build.rs  build.sh  dev-macos-aarch64.sh  uniffi.toml
rust_library/biometrics/uniffi/examples/: biometrics_result_content.rs  check_support_biometrics.rs
rust_library/biometrics/uniffi/lib-swift/: Cargo.toml  build.rs
rust_library/biometrics/uniffi/lib-swift/biometrics-swift/Sources/biometrics-swift/: biometrics_swift.swift
rust_library/biometrics/uniffi/lib-swift/examples/: main.rs
rust_library/biometrics/uniffi/lib-swift/src/: lib.rs
rust_library/biometrics/uniffi/macos-lib/: Cargo.toml  build.rs
rust_library/biometrics/uniffi/macos-lib/biometrics-swift/: Package.resolved  Package.swift
rust_library/biometrics/uniffi/macos-lib/biometrics-swift/Sources/biometrics-swift/: biometrics_swift.swift
rust_library/biometrics/uniffi/macos-lib/biometrics-swift/Tests/biometrics-swiftTests/: biometrics_swiftTests.swift
rust_library/biometrics/uniffi/macos-lib/examples/: main.rs
rust_library/biometrics/uniffi/macos-lib/src/: lib.rs
rust_library/biometrics/uniffi/src/: biometrics.udl  consts.rs  lib.rs  macos.rs  windows.rs
rust_library/biometrics/uniffi/windows-lib/: cargo.toml
rust_library/biometrics/uniffi/windows-lib/examples/: main.rs
rust_library/biometrics/uniffi/windows-lib/src/: lib.rs
rust_library/compression/uniffi/: Cargo.toml  build-ios-arrch64.sh  build-macos-arrch64.sh  build-windows-aarch64.sh  build-windows-x86_64.sh  build.sh  dev-ios.sh  dev-macos.sh  dev-windows.sh  uniffi.toml
rust_library/compression/uniffi/examples/: compression_test.rs
rust_library/compression/uniffi/src/: compression.udl  lib.rs
rust_library/geolocation/uniffi/macos-lib/: Cargo.toml  build.rs
rust_library/geolocation/uniffi/macos-lib/examples/: main.rs
rust_library/geolocation/uniffi/macos-lib/geolocation-swift/: Package.resolved  Package.swift
rust_library/geolocation/uniffi/macos-lib/geolocation-swift/Sources/geolocation-swift/: geolocation_swift.swift
rust_library/geolocation/uniffi/macos-lib/geolocation-swift/Tests/geolocation-swiftTests/: geolocation_swiftTests.swift
rust_library/geolocation/uniffi/macos-lib/src/: lib.rs
rust_library/hardware_info/uniffi/windows-lib/: Cargo.toml
rust_library/hardware_info/uniffi/windows-lib/examples/: main.rs
rust_library/hardware_info/uniffi/windows-lib/src/: lib.rs
rust_library/httpsproxy/uniffi/: Cargo.toml  build.rs
rust_library/httpsproxy/uniffi/src/: httpsproxy.udl  lib.rs
rust_library/keychainstore/uniffi/: Cargo.toml  build-windows-aarch64.sh  build-windows-x86_64.sh  build.rs  build.sh  dev-ios.sh  dev-macos.sh  dev-windows.sh  uniffi.toml
rust_library/keychainstore/uniffi/apple-lib/: Cargo.toml  build.rs
rust_library/keychainstore/uniffi/apple-lib/keychainstore-swift/: Package.resolved  Package.swift
rust_library/keychainstore/uniffi/apple-lib/keychainstore-swift/Sources/keychainstore-swift/: keychainstore_swift.swift
rust_library/keychainstore/uniffi/apple-lib/keychainstore-swift/Tests/keychainstore-swiftTests/: keychainstore_swiftTests.swift
rust_library/keychainstore/uniffi/apple-lib/src/: lib.rs
rust_library/keychainstore/uniffi/macos-lib/: build.rs
rust_library/keychainstore/uniffi/macos-lib/examples/: main.rs
rust_library/keychainstore/uniffi/macos-lib/keychainstore-swift/Sources/keychainstore-swift/: keychainstore_swift.swift
rust_library/keychainstore/uniffi/macos-lib/keychainstore-swift/Tests/keychainstore-swiftTests/: keychainstore_swiftTests.swift
rust_library/keychainstore/uniffi/macos-lib/src/: lib.rs
rust_library/keychainstore/uniffi/src/: apple.rs  keychainstore.udl  lib.rs  windows.rs
rust_library/keychainstore/uniffi/windows-lib/: Cargo.toml
rust_library/keychainstore/uniffi/windows-lib/examples/: main.rs
rust_library/keychainstore/uniffi/windows-lib/src/: lib.rs  validate.rs
rust_library/multipart/: Cargo.toml  README.md  build-mobile.gradle.kts  build.gradle.kts  build.rs  multipart.def  uniffi.toml
rust_library/multipart/src/androidMain/kotlin/multipart/: multipart.android.kt
rust_library/multipart/src/commonMain/kotlin/multipart/: multipart.common.kt
rust_library/multipart/src/desktopMain/resources/darwin-aarch64/: libmultipart.dylib
rust_library/multipart/src/desktopMain/resources/darwin-x86-64/: libmultipart.dylib
rust_library/multipart/src/desktopMain/resources/darwin-x86_64/: libmultipart.dylib
rust_library/multipart/src/iosMain/kotlin/multipart/: multipart.native.kt
rust_library/multipart/uniffi/: Cargo.toml  build.rs  build.sh  dev-android.sh  dev.sh
rust_library/multipart/uniffi/src/: lib.rs  multipart.udl
rust_library/resvg_render/uniffi/: Cargo.toml  build-android-arrch64.sh  build-ios-arrch64.sh  build-macos-arrch64.sh  build-windows-aarch64.sh  build-windows-x86_64.sh  build.sh  dev-android.sh  dev-ios.sh  dev-macos.sh  dev-windows.sh  uniffi.toml
rust_library/resvg_render/uniffi/assets/: manifest.json
rust_library/resvg_render/uniffi/examples/: resvg_render_test.rs
rust_library/resvg_render/uniffi/src/: lib.rs  resvg_render.udl
rust_library/reverse_proxy/uniffi/: Cargo.toml  build.rs  build.sh  dev-android.sh  dev-ios.sh  dev.sh  uniffi.toml
rust_library/reverse_proxy/uniffi/assets/: certs.pem  key.pem  ws.ts
rust_library/reverse_proxy/uniffi/examples/: cert.rs  forward.rs  keypair.rs  main.rs
rust_library/reverse_proxy/uniffi/src/: lib.rs  open_connection.rs  reverse_proxy.udl  tls_server.rs
rust_library/smart_scan/uniffi/: Cargo.toml  build-macos.sh  build-windows.sh  dev-macos-aarch64.sh  uniffi.toml
rust_library/smart_scan/uniffi/macos-lib/: Cargo.toml  build.rs
rust_library/smart_scan/uniffi/macos-lib/smartscan-swift/: Package.swift
rust_library/smart_scan/uniffi/src/: windows.rs
rust_library/smart_scan/uniffi/windows-lib/: Cargo.toml
rust_library/smart_scan/uniffi/windows-lib/examples/: main.rs
(+336 files in other folders)
