[package]
name = "multipart"
version = "0.1.0"
edition = "2021"

[lib]
name = "multipart"
crate-type = ["cdylib", "staticlib"]
path = "uniffi/src/lib.rs"

[features]
tokio-io = ["tokio-util"]

[dependencies]
uniffi = { version = "0.25.2", features = ["tokio"] }

# lib deps
log = "*"
hyper = { version = "1.1.0", features = [
    "http1",
    "server"
] }
multer = "3.0.0"
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7", features = ["io"],  optional = true }
futures-util = { version = "0.3", default-features = false }
lazy_static = "1.4.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[dev-dependencies]
docopt = "*"
serde_derive = "*"
serde = "*"
env_logger = "*"

[build-dependencies]
uniffi = { version = "0.25.2", features = ["build"] }

[profile.release]
opt-level = 3
lto = true
