[package]
name = "httpsproxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "httpsproxy"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = "0.23.0"
uniffi_macros = "0.23.0"
once_cell = "1.12"
thiserror = "1.0"
hyper = { version = "0.14.27", features = ["full"] }
bytes = "1.5.0"
rustls = { version = "0.21.8", features = ["dangerous_configuration"] }
hyper-rustls = "0.24.2"
futures = "0.3.29"
rustls-pemfile = "1.0.3"
tokio = "1.33.0"


[build-dependencies]
uniffi = { version = "0.23.0", features = ["build"] }
uniffi_bindgen = "0.23.0"
uniffi-kotlin-multiplatform = { git = "https://gitlab.com/trixnity/uniffi-kotlin-multiplatform-bindings", rev = "bf48c5fcb153856e3055025a3cbfa56fbf213188" }
camino = "1.1.1"