[package]
name = "keychainstore"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.25.2", features = ["cli"] }
uniffi_macros = "0.25.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
keychainstore-apple = { path = "./apple-lib" }

[target.'cfg(target_os = "windows")'.dependencies]
keychainstore-windows = { path = "./windows-lib" }

[build-dependencies]
uniffi = { version = "0.25.2", features = ["build"] }
uniffi_bindgen = "0.25.2"
uniffi-kotlin-multiplatform = { git = "https://gitlab.com/trixnity/uniffi-kotlin-multiplatform-bindings", rev = "55d51f3abf9819b32bd81756053dcfc10f8d5522" }
camino = "1.1.1"

[profile.release]
opt-level = 3
lto = true