[package]
name = "reverse_proxy"
version = "0.1.1"
edition = "2021"

# [[bin]]
# name = "reverse_proxy_server"
# path = "examples/main.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.23", features = ["cli"] }
uniffi_macros = "0.23.0"
# once_cell = "1.12"
# thiserror = "1.0"

# lib deps
http = "0.2"
hyper = { version = "0.14.27", features = [
    "http1",
    "client",
    "server",
    "runtime",
    "tcp",
    "stream",
] }
hyper-rustls = { version = "0.24" }
log = "*"
rustls-native-certs = { version = "0.6", optional = true }
rustls = { version = "0.21.8", default-features = false, features = [] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.24.0", default-features = false }
webpki-roots = { version = "0.25", optional = true }
futures-util = { version = "0.3", default-features = false }
rustls-pemfile = "1.0.3"
rand = "0.8.5"
rcgen = "0.11.3"
mio = "0.8"

[dev-dependencies]
docopt = "*"
serde_derive = "*"
serde = "*"
rustls-pki-types = "*"
env_logger = "*"

[build-dependencies]
uniffi = { version = "0.23", features = ["build"] }
uniffi_bindgen = "0.23.0"
uniffi-kotlin-multiplatform = { git = "https://gitlab.com/trixnity/uniffi-kotlin-multiplatform-bindings", rev = "bf48c5fcb153856e3055025a3cbfa56fbf213188" }
camino = "1.1.1"

[profile.release]
opt-level = 3
lto = true
