[package]
name = "geolocation-macos"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.1"

[target.'cfg(target_os = "macos")'.dependencies.objc2-foundation]
version = "0.2.0"
features = [
    "dispatch",
    "NSArray",
    "NSAttributedString",
    "NSData",
    "NSDictionary",
    "NSDistributedNotificationCenter",
    "NSEnumerator",
    "NSNotification",
    "NSObjCRuntime",
    "NSPathUtilities",
    "NSProcessInfo",
    "NSRunLoop",
    "NSString",
    "NSThread",
    "NSValue",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-location]
version = "0.2.0"
features = [
  "CLLocation",
  "CLLocationManager",
  "CLLocationManagerDelegate",
]
