[package]
name = "hardware_info-win"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.13.3"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.120"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.57.0"
features = ["Win32_Foundation", "Win32_System_Com"]
